# Delta-Loop

./: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
data/benchmark/: document_comprehension.jsonl  multimodal_qa.jsonl  web_navigation.jsonl
deltaloop/: config.py
deltaloop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deltaloop/agent/: graph.py  nodes.py  ollama_client.py  prompts.py  state.py  tools.py
deltaloop/api/: deps.py  main.py
deltaloop/api/routes/: benchmark.py  dashboard.py  training.py
deltaloop/benchmark/: loader.py  runner.py  scorer.py
deltaloop/clustering/: failure_clusterer.py
deltaloop/critic/: evaluator.py  prompts.py  synthesizer.py
deltaloop/observability/: mlflow_tracker.py
deltaloop/storage/: init_db.py  models.py  repository.py
deltaloop/training/: adapter_manager.py  data_builder.py  dpo_trainer.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: FailureExplorer.jsx  LearningCurve.jsx  TrainingLog.jsx
frontend/src/components/ui/: animated-gradient-background.tsx
tests/: conftest.py
tests/integration/: test_agent_e2e.py
tests/unit/: test_agent.py  test_api.py  test_cluster_balancer.py  test_critic_parsing.py  test_data_builder.py  test_loader.py  test_repository.py  test_runner.py
