[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deltaloop"
version = "0.1.0"
description = "Self-improving agentic system via DPO fine-tuning"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.19",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "httpx>=0.27",
    "langgraph>=0.1",
    "tenacity>=8.3",
    "loguru>=0.7",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "datasets>=2.19",
    "trl>=0.8",
    "pdfplumber>=0.11",
    "mlflow>=2.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["deltaloop*"]
